# sway-scratchpad

./: Cargo.toml  README.md  default.nix
.github/workflows/: build.yml
src/: main.rs  window_size.rs
